journal css update

--- a/client/src/components/Entry/style.css
+++ b/client/src/components/Entry/style.css
@@ -3,6 +3,28 @@ h2 {
     text-align: center;
 }
 
+.note-textarea, .note-title {
+    color: #000000;
+    width: 100%;
+    outline: none;
+    border: none;
+}
+
+.note-title {
+    height: 50px;
+    margin-top: 13px;
+    font-size: 3rem;
+}
+
 .note-textarea {
     background-color: #a2c789;
+    height: calc( 80% - 35px);
+}
+
+.col-md-3 {
+    height: calc(80vh - 70px);
+    border-bottom: none;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    background-color: #fc3;
 }
