--- a/client/src/components/PlantCard/style.css
+++ b/client/src/components/PlantCard/style.css
@@ -6,3 +6,9 @@
 .card {
     margin: 10px;
 }
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #47697E !important; border-color: #47697E !important;
+}
+
+
